syntax = "proto3";

package proto;

import "types.proto";

// The Bucket service definition.
service BucketService {
  // Put user data
  rpc Put (stream NewItem) returns (PutSummary) {}
  // Get an item
  rpc Get (Key) returns (Item) {}
  // Delete an item
  rpc Delete (Key) returns (Empty) {}
  // List the bucket content
  rpc List (Page) returns (stream Item) {}
}

// NewItem is used to put an item in a bucket.
message NewItem {
  // Item to save in the bucket.
  Item item = 1;

  // Bucket name.
  string bucket = 2;
}

// PutSummary is received in response to a Put route.
message PutSummary {
  // The number of items received.
  int32 item_count = 1;
}

message Page {
  string bucket = 1;
  int32 page = 2;
  int32 perPage = 3;
}

message Key {
  string bucket = 1;
  string key = 2;
}

message Item {
  string key = 1;
  bytes value = 2;
}
